--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crowny Hotel</title>
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous"
-    referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"  />
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js" > </script>
 </head>
 
 <body>
@@ -35,7 +33,7 @@
         <span class="fa fa-bars" onclick="menutoggle()"></span>
       </div>
     </div>
-  </header>
+
 
 
   <script>
@@ -52,7 +50,7 @@
   </script>
 
 
-  <section class="home">
+  <section class="home" id="home">
     <div class="content">
       <div class="owl-carousel owl-theme">
         <div class="item">
@@ -140,9 +138,9 @@
     </div>
   </section>
 
+<!-- about section -->
 
-
-  <section class="about top">
+  <section class="about top" id="about">
     <div class="container flex">
       <div class="left">
         <div class="heading">
@@ -184,8 +182,9 @@
     </div>
   </section>
 
+  <!-- rooms  -->
 
-  <section class="rooms">
+  <section class="rooms" id="rooms">
     <div class="container top">
       <div class="heading">
         <h1>EXPOLRE</h1>
